# backup-run

./: .gitignore  README.md  backup  pyproject.toml  setup.py
.github/workflows/: ci.yml
backup_run/: __main__.py  backup.py  config.py  constants.py  git_wrapper.py  prompts.py
docs/: BACKUP-INVENTORY.md
manifest/: backup-run.conf
scripts/: README.md  _common.sh  backup_extras.sh  chrome_bookmarks_to_html.py  snapshot_chrome_inventory.sh  snapshot_dev_layout.sh  snapshot_postman.sh
src/backup_run/: __main__.py  backup.py  compatibility.py  config.py  git_wrapper.py  printing.py  prompts.py  reinstall.py  upgrade.py  utils.py
src/backup_run/extras/: __init__.py  chrome.py  dev_layout.py
