[project]
name = "backup-run"
version = "1.0.0"
description = "Git-integrated backup orchestrator (fork of shallow-backup)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Borislav Grigorov", email = "b.s.grigorov@gmail.com" }]
keywords = ["backup", "dotfiles", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Backup",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.1",
    "colorama>=0.4.6",
    "gitpython>=3.1.40",
    "inquirer>=2.10.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
backup-run = "backup_run.__main__:cli"

[project.urls]
Homepage = "https://github.com/bsgrigorov/backup-run"
Issues = "https://github.com/bsgrigorov/backup-run/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backup_run"]

[tool.hatch.build.targets.wheel.force-include]
"manifest/backup-run.conf" = "backup_run/manifest/backup-run.conf"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.uv]
required-version = ">=0.11.6"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # legacy long lines / docstrings
    "F403",  # colorama star imports in printing.py
    "F405",  # colorama star imports in printing.py
    "B008",  # click option defaults
]

[tool.ruff.format]
quote-style = "double"
